@@ -1,3 +1,8 @@
+2009-01-27  Andreas Schwab  <schwab@suse.de>
+
+	* mach-o.c (bfd_mach_o_archive_p): Restrict the number of
+	architectures in the archive.
+
 2009-01-27  Hans-Peter Nilsson  <hp@axis.com>
 
 	* elf32-cris.c (cris_elf_relocate_section) <case R_CRIS_16_DTPREL>
